Centered nav bar and header text. Polishing that before moving on to mobile styling.

--- a/less/home-page.less
+++ b/less/home-page.less
@@ -9,9 +9,9 @@
     }
 
     p {
-      padding:0 15px;
+      padding: 0 15px;
     }
-  
+
   }
 
   .space-images {
@@ -56,15 +56,12 @@
       p {
         margin-bottom: 26px;
       }
-
-      .btn {
-      }
     }
 
     .walk-img {
       width: 46%;
       margin-left: 4%;
-      
+
       img {
         width: 100%;
         height: auto;
@@ -72,4 +69,21 @@
       }
     }
   }
-}// home
+}
+
+// home
+
+h1 {
+  font-size: 4rem;
+  margin-bottom: 1rem;
+}
+
+
+.header-bar {
+
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  border: 3px solid black;
+  .centered();
+}
