--- a/css/index.css
+++ b/css/index.css
@@ -6,6 +6,7 @@
   border-radius: 0.6rem;
   color: white;
   font-size: 1.6rem;
+  font-family: "Ubuntu";
   cursor: pointer;
 }
 @media (max-width: 500px) {
@@ -17,18 +18,21 @@
     border-radius: 0.6srem;
     color: white;
     font-size: 1.6rem;
+    font-family: "Ubuntu";
     cursor: pointer;
     margin-bottom: 1rem;
   }
 }
 .btn:hover {
-  background-color: white;
-  color: teal;
+  background-color: #9fb4c7;
+  color: #000000;
   transition-duration: 0.3s;
 }
-.mobile-center {
+.centered {
   width: 80%;
   margin: 0 auto;
+  justify-content: center;
+  align-items: center;
 }
 /* http://meyerweb.com/eric/tools/css/reset/ 
    v2.0 | 20110126
@@ -252,4 +256,18 @@ footer {
   width: 100%;
   height: auto;
   border-radius: 10px;
+}
+h1 {
+  font-size: 4rem;
+  margin-bottom: 1rem;
+}
+.header-bar {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  border: 3px solid black;
+  width: 80%;
+  margin: 0 auto;
+  justify-content: center;
+  align-items: center;
 }
