--- a/css/index.css
+++ b/css/index.css
@@ -1,37 +1,10 @@
-.btn {
-  width: 33%;
-  height: 12%;
-  background-color: black;
-  border: none;
-  border-radius: 0.6rem;
-  color: white;
-  font-size: 1.6rem;
-  font-family: "Ubuntu";
-  cursor: pointer;
-}
-@media (max-width: 500px) {
-  .btn {
-    width: 100%;
-    height: 5rem;
-    background-color: black;
-    border: none;
-    border-radius: 0.5rem;
-    color: white;
-    font-size: 1.6rem;
-    font-family: "Ubuntu";
-    cursor: pointer;
-    margin-bottom: 1rem;
-  }
-}
-.btn:hover {
-  background-color: #9fb4c7;
-  color: #000000;
-  transition-duration: 0.3s;
-}
 .centered {
   margin: 0 auto;
   justify-content: center;
   align-items: center;
+}
+.invisible {
+  display: none;
 }
 /* http://meyerweb.com/eric/tools/css/reset/ 
    v2.0 | 20110126
@@ -285,6 +258,7 @@ footer {
   .home .walk {
     flex-direction: column-reverse;
     margin-top: 3rem;
+    padding-bottom: 1.5rem;
   }
 }
 .home .walk .walk-text {
@@ -361,4 +335,34 @@ h1 {
   .launch {
     display: none;
   }
+}
+.btn {
+  width: 33%;
+  height: 12%;
+  background-color: black;
+  border: none;
+  border-radius: 0.6rem;
+  color: white;
+  font-size: 1.6rem;
+  font-family: "Ubuntu";
+  cursor: pointer;
+}
+@media (max-width: 500px) {
+  .btn {
+    width: 100%;
+    height: 5rem;
+    background-color: black;
+    border: none;
+    border-radius: 0.5rem;
+    color: white;
+    font-size: 1.6rem;
+    font-family: "Ubuntu";
+    cursor: pointer;
+    margin-bottom: 0.6rem;
+  }
+}
+.btn:hover {
+  background-color: #9fb4c7;
+  color: #000000;
+  transition-duration: 0.3s;
 }
