--- a/css/index.css
+++ b/css/index.css
@@ -2,6 +2,7 @@
   margin: 0 auto;
   justify-content: center;
   align-items: center;
+  text-align: center;
 }
 .invisible {
   display: none;
@@ -173,25 +174,29 @@ p {
   justify-content: space-around;
   width: 100%;
   font-size: 1.6rem;
+  margin: 0 auto;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
 }
 @media (max-width: 500px) {
   .header-nav {
     flex-direction: row;
-    justify-content: space-around;
-    text-align: center;
     margin: 0 auto;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
+    text-align: center;
+    font-size: 1.2rem;
   }
 }
 .header-nav a {
   color: black;
   text-decoration: none;
-  font-size: 1.6rem;
+  font-size: 1.4rem;
   padding: 1rem;
 }
 .header-nav a:hover {
-  font-size: 1.8rem;
+  font-size: 1.5rem;
   transition-duration: 0.2s;
 }
 footer {
@@ -204,6 +209,9 @@ footer {
   justify-content: center;
   align-items: center;
 }
+.home .intro {
+  margin-top: 12rem;
+}
 .home .intro h2 {
   padding: 15px;
 }
@@ -213,6 +221,14 @@ footer {
 .home .intro .header-img {
   width: 100%;
   border-radius: 1.5rem;
+}
+@media (max-width: 500px) {
+  .home .intro .header-img {
+    margin: 0 auto;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+  }
 }
 .home .space-images {
   display: flex;
@@ -225,6 +241,7 @@ footer {
     margin: 0 auto;
     justify-content: center;
     align-items: center;
+    text-align: center;
   }
 }
 .home .space-images img {
@@ -239,6 +256,7 @@ footer {
     margin: 0 auto;
     justify-content: center;
     align-items: center;
+    text-align: center;
     margin-top: 2rem;
   }
 }
@@ -288,6 +306,7 @@ footer {
     margin: 0 auto;
     justify-content: center;
     align-items: center;
+    text-align: center;
     width: 100%;
     margin-bottom: 1.8rem;
   }
@@ -314,10 +333,18 @@ h1 {
   margin: 0 auto;
   justify-content: center;
   align-items: center;
+  text-align: center;
+  position: fixed;
+  top: 0;
+  background-color: white;
 }
 @media (max-width: 500px) {
   .site-container {
-    width: 90%;
+    width: 100%;
+    margin: 0 auto;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
   }
 }
 @media (max-width: 500px) {
