--- a/less/navigation.less
+++ b/less/navigation.less
@@ -5,23 +5,25 @@
     justify-content: space-around;
     width: 100%;
     font-size: 1.6rem;
+    .centered();
 
     @media @mobile {
         flex-direction: row;
+        margin: 0 auto;
         justify-content: space-around;
+        align-items: center;
         text-align: center;
-        .centered();
-
+        font-size: 1.2rem;
     }
 
     & a {
         color: black;
         text-decoration: none;
-        font-size: 1.6rem;
+        font-size: 1.4rem;
         padding: 1rem;
 
         &:hover {
-            font-size: 1.8rem;
+            font-size: 1.5rem;
             transition-duration: 0.2s;
         }
     }
