--- a/css/index.css
+++ b/css/index.css
@@ -280,6 +280,7 @@ footer {
   .home .walk {
     flex-direction: column-reverse;
     margin-top: 3rem;
+    padding: 2.5rem;
     padding-bottom: 1.5rem;
   }
 }
