--- a/less/home-page.less
+++ b/less/home-page.less
@@ -71,6 +71,7 @@
     @media @mobile {
       flex-direction: column-reverse;
       margin-top: 3rem;
+      padding: 2.5rem;
       padding-bottom: 1.5rem;
     }
 
